# iTCH

./: .gitignore  CMakeCPackOptions.cmake.in  CMakeLists.txt  COPYING  INSTALL  README  TODO
Deployment/: About.txt  License.txt
PiTCH/: BannerForm.cpp  BannerForm.h  BannerForm.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkDialog.cpp  NetworkDialog.h  NetworkDialog.ui  PiTCH.pro  PiTCH.qrc  PiTCH.rc  PiTCH.res  PiTCHNetworkDialog.cpp  PiTCHNetworkDialog.h  PiTCHNetworkDialog.ui  PiTCHWindow.cpp  PiTCHWindow.h  PiTCHWindow.ui  ScrollingLabel.cpp  ScrollingLabel.h  TrackInfoForm.cpp  TrackInfoForm.h  TrackInfoForm.ui  iTCHClient.cpp  iTCHClient.h  iTCHMethod.cpp  iTCHMethod.h  iTCHNetworkInfo.h  main.cpp
STiTCH/: AclWidget.cpp  AclWidget.h  CMakeLists.txt  STiTCH.pro  STiTCH.qrc  STiTCH.rc  STiTCH.res  STiTCHDialog.cpp  STiTCHDialog.h  STiTCHDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
common/: iTCHClient.cpp  iTCHClient.h  iTCHConnection.cpp  iTCHConnection.h  iTCHController.cpp  iTCHController.h  iTCHEventSink.cpp  iTCHEventSink.h  iTCHMethod.cpp  iTCHMethod.h  iTCHServer.cpp  iTCHServer.h
iTCHCore/: CMakeLists.txt  iTCHClient.cpp  iTCHConnection.cpp  iTCHConnection.h  iTCHController.cpp  iTCHController.h  iTCHEventSink.cpp  iTCHEventSink.h  iTCHMethod.cpp  iTCHMethod.h  iTCHNetworkInfo.h  iTCHServer.cpp  iTCHServer.h
iTCHCore/include/GeneratedCode/: iTCH.pb.cc  iTCH.pb.h
iTCHCore/include/iTCH/: Client.h  Connection.h  Controller.h  EventSink.h  MessageBuilder.h  Method.h  NetworkInfo.h  Server.h
iTCHCore/proto/: iTCH.pb.cc
iTCHCore/protobuf/: iTCH.pb.h  iTCH.proto
iTCHCore/src/iTCH/: Client.cpp  Connection.cpp  Controller.cpp  EventSink.cpp  MessageBuilder.cpp  Method.cpp  Server.cpp
